plugins/kotlin/idea/tests/testData/highlighterMetaInfo/JavaRecord.kt.highlighting
// FIR_IDENTICAL
// WITH_STDLIB
// MIN_JAVA_VERSION: 17

// FILE: usage.kt
fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>main<!>() {
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>record1<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_CONSTRUCTOR'")!>JavaRecord<!>("", 32)
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>record2<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_CONSTRUCTOR'")!>JavaRecord<!>(4L, "str")
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>string<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>String<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>record1<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_CALL'")!>string<!>()
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>string2<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>String<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>record1<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_SYNTHETIC_EXTENSION_PROPERTY'")!>string<!>
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>number<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Int<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>record1<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_CALL'")!>number<!>()
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>number2<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Int<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>record1<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_SYNTHETIC_EXTENSION_PROPERTY'")!>number<!>
}
